adding first files

--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -1,8 +1,11 @@
 {% extends "layout.html" %}
 
 {% block content %}
+    <div class="container">
+
+
   <table class="table">
-    <thead>
+    <thead class="thread-dard">
     <tr>
       <th scope="col">#</th>
       <th scope="col">First</th>
@@ -31,5 +34,6 @@
     </tr>
     </tbody>
   </table>
+</div>
 
 {% endblock %}
