--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -1,39 +1,62 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="container">
+  <div class="container">
+    <table class="table">
+      <thead class="thread-dard">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+        <th scope="col">Gender</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+        <td>male</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+        <td>male</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+        <td>male</td>
+      </tr>
 
+      <tr>
+        <th scope="row">3</th>
+        <td>John</td>
+        <td>the Bird</td>
+        <td>@facebook</td>
+        <td>male</td>
+      </tr>
 
-  <table class="table">
-    <thead class="thread-dard">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    </tbody>
-  </table>
+      <tr>
+        <th scope="row">3</th>
+        <td>John3</td>
+        <td>the Bird</td>
+        <td>@facebook3</td>
+        <td>male</td>
+      </tr>
+
+      </tbody>
+    </table>
+
+    <p>The geography and climate of Pakistan are extremely diverse, and the country is home to a wide variety of wildlife.[198] Pakistan covers an area of 881,913 km2 (340,509 sq mi), approximately equal to the combined land areas of France and the United Kingdom. It is the 33rd-largest nation by total area, although this ranking varies depending on how the disputed territory of Kashmir is counted. Pakistan has a 1,046 km (650 mi) coastline along the Arabian Sea and the Gulf of Oman in the south[199] and land borders of 6,774 km (4,209 mi) in total: 2,430 km (1,510 mi) with Afghanistan, 523 km (325 mi) with China, 2,912 km (1,809 mi) with India and 909 km (565 mi) with Iran.[200] It shares a marine border with Oman,[201] and is separated from Tajikistan by the cold, narrow Wakhan Corridor.[202] Pakistan occupies a geopolitically important location at the crossroads of South Asia, the Middle East, and Central Asia.</p>
+    <p>Geologically, Pakistan is located in the Indus–Tsangpo Suture Zone and overlaps the Indian tectonic plate in its Sindh and Punjab provinces; Balochistan and most of Khyber Pakhtunkhwa are within the Eurasian plate, mainly on the Iranian plateau. Gilgit–Baltistan and Azad Kashmir lie along the edge of the Indian plate and hence are prone to violent earthquakes. This region has the highest rates of seismicity and largest earthquakes in the Himalaya region.[203] Ranging from the coastal areas of the south to the glaciated mountains of the north, Pakistan's landscapes vary from plains to deserts, forests, hills, and plateaus</p>
+    <p>Pakistan is divided into three major geographic areas: the northern highlands, the Indus River plain, and the Balochistan Plateau.</p>
 </div>
 
 {% endblock %}
