--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  {https://www.google.com/search?q=car+images&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjiqoKQ4sDdAhVqkuAKHSKeAVIQ_AUIDigB&biw=569&bih=703#imgrc=9MCK_pv-DXvpuM:}
+  <img src="https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/H1n4-EoFirrny2m5/videoblocks-pakistan-flag-waving_braif1ztb_thumbnail-small01.jpg" width="200" height="75" />
 
   {% block content %}{% endblock %}
 </body>
